<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".NewAccountDuaAct">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:background="@drawable/backgroundpadangintl">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <View
                android:id="@+id/view3"
                android:layout_width="match_parent"
                android:layout_height="250dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"></View>

            <TextView
                android:id="@+id/textView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="24dp"
                android:layout_marginTop="32dp"
                android:layout_marginEnd="24dp"
                android:fontFamily="@font/mregular"
                android:gravity="center"
                android:text="Data Umum"
                android:textColor="@color/WhitePrimary"
                android:textSize="30sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"></TextView>

            <LinearLayout
                android:id="@+id/linearLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="24dp"
                android:layout_marginTop="36dp"
                android:layout_marginEnd="24dp"
                android:background="@drawable/bg_layout_white"
                android:orientation="vertical"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textView">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="32dp"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="24dp"
                        android:layout_marginRight="24dp"
                        android:fontFamily="@font/mregular"
                        android:text="@string/kontingen"
                        android:textColor="@color/GrayPrimary"
                        android:textSize="20sp"></TextView>

                    <EditText
                        android:id="@+id/kontingen"
                        android:layout_width="match_parent"
                        android:layout_height="50dp"
                        android:layout_marginLeft="24dp"
                        android:layout_marginTop="8dp"
                        android:layout_marginRight="24dp"
                        android:background="@drawable/bttn_input"></EditText>

                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="16dp"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="24dp"
                        android:layout_marginRight="24dp"
                        android:fontFamily="@font/mregular"
                        android:text="@string/Manager"
                        android:textColor="@color/GrayPrimary"
                        android:textSize="20sp"></TextView>

                    <EditText
                        android:id="@+id/manager"
                        android:layout_width="match_parent"
                        android:layout_height="50dp"
                        android:layout_marginLeft="24dp"
                        android:layout_marginTop="8dp"
                        android:layout_marginRight="24dp"
                        android:background="@drawable/bttn_input"
                        android:inputType="text"></EditText>
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="16dp"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="24dp"
                        android:layout_marginRight="24dp"
                        android:fontFamily="@font/mregular"
                        android:text="@string/NoHpManager"
                        android:textColor="@color/GrayPrimary"
                        android:textSize="20sp"></TextView>

                    <EditText
                        android:id="@+id/nohpmanager"
                        android:layout_width="match_parent"
                        android:layout_height="50dp"
                        android:layout_marginLeft="24dp"
                        android:layout_marginTop="8dp"
                        android:layout_marginRight="24dp"
                        android:background="@drawable/bttn_input"
                        android:inputType="text"></EditText>
                </LinearLayout>


                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="16dp"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="24dp"
                        android:layout_marginRight="24dp"
                        android:fontFamily="@font/mregular"
                        android:text="@string/Official"
                        android:textColor="@color/GrayPrimary"
                        android:textSize="20sp"></TextView>

                    <EditText
                        android:id="@+id/official"
                        android:layout_width="match_parent"
                        android:layout_height="50dp"
                        android:layout_marginLeft="24dp"
                        android:layout_marginTop="8dp"
                        android:layout_marginRight="24dp"
                        android:background="@drawable/bttn_input"
                        android:inputType="text"></EditText>
                </LinearLayout>


                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="16dp"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="24dp"
                        android:layout_marginRight="24dp"
                        android:fontFamily="@font/mregular"
                        android:text="@string/NoHpOfficial"
                        android:textColor="@color/GrayPrimary"
                        android:textSize="20sp"></TextView>

                    <EditText
                        android:id="@+id/nohpofficial"
                        android:layout_width="match_parent"
                        android:layout_height="50dp"
                        android:layout_marginLeft="24dp"
                        android:layout_marginTop="8dp"
                        android:layout_marginRight="24dp"
                        android:background="@drawable/bttn_input"
                        android:inputType="text"></EditText>
                </LinearLayout>


                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="16dp"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="24dp"
                        android:layout_marginRight="24dp"
                        android:fontFamily="@font/mregular"
                        android:text="@string/Pelatih"
                        android:textColor="@color/GrayPrimary"
                        android:textSize="20sp"></TextView>

                    <EditText
                        android:id="@+id/pelatih"
                        android:layout_width="match_parent"
                        android:layout_height="50dp"
                        android:layout_marginLeft="24dp"
                        android:layout_marginTop="8dp"
                        android:layout_marginRight="24dp"
                        android:background="@drawable/bttn_input"
                        android:inputType="text"></EditText>
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="16dp"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="24dp"
                        android:layout_marginRight="24dp"
                        android:fontFamily="@font/mregular"
                        android:text="@string/NoHpPelatih"
                        android:textColor="@color/GrayPrimary"
                        android:textSize="20sp"></TextView>

                    <EditText
                        android:id="@+id/nohppelatih"
                        android:layout_width="match_parent"
                        android:layout_height="50dp"
                        android:layout_marginLeft="24dp"
                        android:layout_marginTop="8dp"
                        android:layout_marginRight="24dp"
                        android:background="@drawable/bttn_input"
                        android:inputType="text"></EditText>
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="16dp"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="24dp"
                        android:layout_marginRight="24dp"
                        android:fontFamily="@font/mregular"
                        android:text="@string/JumlahKelas"
                        android:textColor="@color/GrayPrimary"
                        android:textSize="20sp"></TextView>

                    <EditText
                        android:id="@+id/jumlahkelas"
                        android:layout_width="match_parent"
                        android:layout_height="50dp"
                        android:layout_marginLeft="24dp"
                        android:layout_marginTop="8dp"
                        android:layout_marginRight="24dp"
                        android:background="@drawable/bttn_input"
                        android:inputType="text"
                        android:layout_marginBottom="32dp"></EditText>
                </LinearLayout>

            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="80dp"
                android:layout_marginStart="24dp"
                android:layout_marginTop="32dp"
                android:layout_marginEnd="24dp"
                android:layout_marginBottom="50dp"
                android:orientation="horizontal"
                android:weightSum="2"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/linearLayout">

                <LinearLayout
                    android:id="@+id/bttnBack"
                    android:layout_width="180dp"
                    android:layout_height="match_parent"
                    android:layout_marginRight="20dp"
                    android:layout_weight="1"
                    android:background="@drawable/bg_layout_white">

                    <ImageView
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:src="@drawable/ic_arrow_back_black_24dp"></ImageView>
                </LinearLayout>

                <Button
                    android:id="@+id/bttnContinue"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:background="@drawable/bttn_sigin"
                    android:fontFamily="@font/mmedium"
                    android:text="@string/Continue"
                    android:textColor="@color/WhitePrimary"
                    android:textSize="20sp"></Button>
            </LinearLayout>

        </androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>


</androidx.constraintlayout.widget.ConstraintLayout>